feature(*): generated base with goa
